--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,15 @@
 </div>
 <h2>Get your currency exchange rates here using the menu below:</h2>
 <div class="row">
+<div class="co-md-3">
 <div class="radio">
   <label>
     <input type="radio" name="currency" value="euro" checked>
     Euro
   </label>
 </div>
+</div>
+<div class="co-md-3">
 <div class="radio">
   <label>
     <input type="radio" name="currency" value="british">
