--- a/src/index.html
+++ b/src/index.html
@@ -1,52 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Currency Exchange</title>
 </head>
-<body>
-<div class="container">
-<div class="jumbotron">
-  <h1>Currency Exchange Rates!</h1>
-</div>
-<h2>Get your currency exchange rates here using the menu below:</h2>
-<div class="row">
-<div class="co-md-3">
-<div class="radio">
-  <label>
-    <input type="radio" name="currency" value="euro" checked>
-    Euro
-  </label>
-</div>
-</div>
-<div class="co-md-3">
-<div class="radio">
-  <label>
-    <input type="radio" name="currency" value="british">
-    Great British Pound
-  </label>
-</div>
-<div class="radio">
-  <label>
-    <input type="radio" name="currency" value="canadian">
-    Canadian Dollar
-  </label>
-</div>
-</div>
-<div class="row">
-  <div class="radio">
-    <label>
-      <input type="radio" name="currency" value="australian">
-      Australian Dollar
-    </label>
-  </div>
-  <div class="radio">
-    <label>
-      <input type="radio" name="currency" value="yen">
-      Yen
-    </label>
-  </div>
-  </div>
 
-</div>
+<body>
+  <div class="container">
+    <div class="jumbotron">
+      <h1>Currency Exchange Rates!</h1>
+    </div>
+    <h2>Get your currency exchange rates here using the menu below:</h2>
+    <P>Note: Input is for USD only.</P>
+    <label class="usd">
+      $$$
+    <input class="amount" for="currencyExchange" type="number">
+    </label>
+    <div class="radio">
+      <label>
+        <input type="radio" name="currency" value="eur" checked>
+        European Euro
+      </label>
+    </div>
+    <div class="radio">
+      <label>
+        <input type="radio" name="currency" value="gbp">
+        Great British Pound
+      </label>
+    </div>
+    <div class="radio">
+      <label>
+        <input type="radio" name="currency" value="Canadian">
+        Canadian Dollar
+      </label>
+    </div>
+    <div class="radio">
+      <label>
+        <input type="radio" name="currency" value="aud">
+        Australian Dollar
+      </label>
+    </div>
+    <div class="radio">
+      <label>
+        <input type="radio" name="currency" value="jpy">
+        Japanese Yen
+      </label>
+    </div>
+  </div>
 </body>
-</html> 
+
+</html>
