Taking lunch. WIP

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
     <br>
     <div class="radio">
       <label>
-        <input type="radio" name="currency" value="eur" checked>
+        <input type="radio" name="currency" value="eur" class="eur" checked>
         European Euro
       </label>
     </div>
