very confused, trying to figure this out

--- a/src/index.html
+++ b/src/index.html
@@ -19,31 +19,31 @@
       <br>
       <div class="radio">
         <label>
-          <input type="radio" name="currency" value="eur" class="eur" checked>
+          <input type="radio" name="currency" value="0" class="eur" checked>
           European Euro
         </label>
       </div>
       <div class="radio">
         <label>
-          <input type="radio" name="currency" value="gbp">
+          <input type="radio" name="currency" value="1" id="gbp">
           Great British Pound
         </label>
       </div>
       <div class="radio">
         <label>
-          <input type="radio" name="currency" value="cad">
+          <input type="radio" name="currency" value="2" id="cad">
           Canadian Dollar
         </label>
       </div>
       <div class="radio">
         <label>
-          <input type="radio" name="currency" value="aud">
+          <input type="radio" name="currency" value="3" id="aud">
           Australian Dollar
         </label>
       </div>
       <div class="radio">
         <label>
-          <input type="radio" name="currency" value="jpy">
+          <input type="radio" name="currency" value="4" id="jpy">
           Japanese Yen
         </label>
       </div>
