focusing on styling for now

--- a/src/index.html
+++ b/src/index.html
@@ -56,6 +56,11 @@
     <div class="showAud"></div>
     <div class="showJpy"></div>
     <div class="showErrors"></div>
+    <a href="https://www.investopedia.com/articles/forex/11/why-trade-forex.asp">
+    <div class="card">
+     <h4>Information on currency exchanges can be found by clicking this box.</h4>
+    </div>
+    </a>
   </div>
 </body>
 
