more styling, heavy WIP

--- a/src/index.html
+++ b/src/index.html
@@ -49,18 +49,16 @@
       </div>
       <button class="btn" id="exchangeRate">See your exchange!</button>
     </form>
-    <h3>Your exchange will leave you with</h3>
-    <div class="showEur"></div>
-    <div class="showGbp"></div>
-    <div class="showCad"></div>
-    <div class="showAud"></div>
-    <div class="showJpy"></div>
-    <div class="showErrors"></div>
+    <div class="row">
     <a href="https://www.investopedia.com/articles/forex/11/why-trade-forex.asp">
     <div class="card">
      <h4>Information on currency exchanges can be found by clicking this box.</h4>
     </div>
     </a>
+    <div class="card">
+      <h5>THANKS FOR CHECKING THIS OUT!</h5>
+    </div>
+    </div>
   </div>
 </body>
 
