Fixed api key in .env file on repo

--- a/src/index.html
+++ b/src/index.html
@@ -19,36 +19,37 @@
       <br>
       <div class="radio">
         <label>
-          <input type="radio" name="currency" value="0" class="eur" checked>
+          <input type="radio" name="currency" value="EUR" id="eur" checked>
           European Euro
         </label>
       </div>
       <div class="radio">
         <label>
-          <input type="radio" name="currency" value="1" id="gbp">
+          <input type="radio" name="currency" value="GBP" id="gbp">
           Great British Pound
         </label>
       </div>
       <div class="radio">
         <label>
-          <input type="radio" name="currency" value="2" id="cad">
+          <input type="radio" name="currency" value="CAD" id="cad">
           Canadian Dollar
         </label>
       </div>
       <div class="radio">
         <label>
-          <input type="radio" name="currency" value="3" id="aud">
+          <input type="radio" name="currency" value="AUD" id="aud">
           Australian Dollar
         </label>
       </div>
       <div class="radio">
         <label>
-          <input type="radio" name="currency" value="4" id="jpy">
+          <input type="radio" name="currency" value="JPY" id="jpy">
           Japanese Yen
         </label>
       </div>
-      <button class="btn" id="exchangeRate">See your exchange!</button>
+      <button class="btn" id="exchangeRate" type="submit">See your exchange!</button>
     </form>
+    <div class="result"></div>
     <div class="row">
     <a href="https://www.investopedia.com/articles/forex/11/why-trade-forex.asp">
     <div class="card">
