Add clear field function

--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
       </div>
       <button class="btn" id="exchangeRate" type="submit">See your exchange!</button>
     </form>
-    <div class="result"></div>
+    <div id="result"></div>
     <div class="row">
     <a href="https://www.investopedia.com/articles/forex/11/why-trade-forex.asp">
     <div class="card">
